--- a/projetocss2/stylepage.css
+++ b/projetocss2/stylepage.css
@@ -103,24 +103,48 @@ header{
 @media screen and (max-width: 1000px){
     .container-left{
         width: 100%;
-        height: 50%;
+        height: 30%;
         padding: 0;
         margin: 0;
     }
 
     .container-right{
         display: block;
-        height: auto;
+        height: 490px;
         width: 100%;
         position: static;
         margin-top: 60px;
+       padding: 40px;
     }
 
     img{
         position: static;
+        max-width: 90%;
+        margin-top: 10%;
     }
 
     header{
         display: none;
-    }
+   }
+
+   h1{
+    font-size: 36px;
+    line-height: 52px;
+    width: auto;
+    margin: 50px 50px 0px 50px;
+    text-align: center;
+   }
+
+   p{
+    margin: 15px 40px;
+    width: auto;
+    text-align: center;
+    font-size: 14px;
+    line-height: 24px;
+   }
+
+   button{
+    margin: 0px auto;
+    display: block;
+   }
 }
